--- a/vite-project/src/components/styles/CreateInputCheckbox.css
+++ b/vite-project/src/components/styles/CreateInputCheckbox.css
@@ -29,14 +29,12 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
   margin: 0 -10px;
   margin-top: 20px;
   padding: 0 20px;
   padding-bottom: 5px;
   padding-top: 15px;
-
-  background-color: #0f172a;
+  background-color: #00002f;
   border: 1px solid transparent;
   border-radius: 7px;
   box-shadow: 0 0 7px #38bdf8;
@@ -47,8 +45,7 @@
 }
 
 .checkbox-lbl-input:hover {
-  box-shadow: 0 0 0 #38bdf8;
-  border: 1px solid #38bdf8;
+    border-color: #475569;
 }
 
 .creation--btn--div {
