--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -11,7 +11,7 @@
 
 .div--todo {
     width: 90%;
-    background-color: #0f172a;
+    background-color: #00002f;;
     border: none;
     border-radius: 20px;
     padding: 20px;
