--- a/vite-project/src/components/styles/TableCalendar.css
+++ b/vite-project/src/components/styles/TableCalendar.css
@@ -41,7 +41,7 @@ td {
 }
 
 tr:nth-child(even) {
-    background-color: #0f172a;
+    background-color: #00002f;
 }
 
 .calendar--todo {
@@ -50,10 +50,12 @@ tr:nth-child(even) {
     align-items: center;
     justify-content: flex-start;
     font-size: 12px;
-    color: #000;
+    color: #333;
     background-color: #87cefa;
-    border: 1px solid #000;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #000;
     border-right: 1px solid rgba(0, 255, 255, 0.7);
-    border-left: 1px solid rgba(0, 255, 255, 0.7);
+    border-left: 3px solid #3564ff;
     cursor: pointer;
+    padding: 3px 2px;
 }
