--- a/vite-project/src/components/styles/TodoPerDay.css
+++ b/vite-project/src/components/styles/TodoPerDay.css
@@ -12,7 +12,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #0f172a;
+  /* background-color: #0f172a; */
+  background-color: #00002f;
   border: none;
   border-radius: 20px;
   box-shadow: 0 0 7px #38bdf8;
@@ -80,5 +81,5 @@
 }
 
 .cross--out--btn:active {
-  background-color: rgb(104, 255, 104);
+  background-color: rgb(0, 181, 0);
 }
