--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -4,7 +4,7 @@
 
 .daycomp-box {
   width: 100%;
-  background-color: #0f172a;
+  background-color: #00002f;
   border: none;
   border-radius: 7px;
   box-shadow: 0 0 7px #4169e180;
@@ -20,10 +20,10 @@
 .title--box {
   width: 100%;
   text-align: center;
+  font-size: 16px;
+  font-weight: bold;
   margin: auto;
   border-bottom: 1px solid rgba(65, 105, 225, 0.2);
-
-  /* border: 1px solid magenta; */
 }
 
 .div--btn--client {
@@ -33,8 +33,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
-  /* border: 1px solid yellow; */
 }
 
 .mini-btn {
@@ -49,8 +47,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-  /* border: 1px solid red; */
 }
 
 .input-button-textarea {
@@ -65,66 +61,79 @@
 .input-button-client {
   position: relative;
   width: 100%;
-  /* width: 15.75%; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   z-index: 1;
-
-  /* border: 1px solid coral; */
 }
 
 /* 2 */
 .input-button-mail {
   position: relative;
   width: 100%;
-  /* width: 15.75%; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   z-index: 1;
-
-  /* border: 1px solid coral; */
 }
 
 /* 3 */
 .input-button-phone {
   position: relative;
   width: 100%;
-  /* width: 15.75%; */
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   z-index: 10;
-
-  /* border: 1px solid coral; */
 }
 
 .textarea--editable {
   width: 77%;
-
+  font-size: 12px;
+  font-weight: normal;
   color: #87cefa;
-
-  background: #0f172a;
-
+  background-color: #00002f;
   border: 1.5px solid #334155;
   border-radius: 12px;
   outline: none;
+  resize: none;
+  appearance: none;
   transition: 
       border-color 0.25s ease,
       box-shadow 0.25s ease,
       background-color 0.25s ease;
+}
+
+/* Style du scroll pour Webkit (Chrome, Safari) */
+.textarea--editable::-webkit-scrollbar {
+  width: 10px;
+}
+
+.textarea--editable::-webkit-scrollbar-thumb {
+  background-color: #0059ff;
+  border-radius: 4px;
+}
+
+.textarea--editable::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Style du scroll pour Firefox */
+.textarea--editable {
+  scrollbar-color: #0059ff #111;
+  scrollbar-width: thin;
 }
 
 .input--editable {
   width: 75%;
   padding: 7px 7px;
+  text-align: center;
   font-size: 16px;
   color: #87cefa;
-  background: #0f172a;
+  background-color: #00002f;
   border: 1.5px solid #334155;
   border-radius: 12px;
   outline: none;
@@ -132,14 +141,31 @@
       border-color 0.25s ease,
       box-shadow 0.25s ease,
       background-color 0.25s ease;
+}
+
+.input--editable:focus {
+    border-color: #38bdf8;
+    box-shadow: 0 0 0 4px rgba(56, 189, 248, 0.2);
+}
+
+.input--editable:hover {
+    border-color: #475569;
 }
 
 span {
   width: 80%;
   height: auto;
   text-align: center;
+  font-size: 16px;
+  font-weight: normal;
+}
 
-  /* border: 1px solid salmon; */
+S {
+  width: 80%;
+  height: auto;
+  text-align: center;
+  font-size: 14px;
+  font-weight: normal;
 }
 
 .div--btn--submit {
@@ -149,8 +175,6 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
-  
-  /* border: 1px solid yellow; */
 }
 
 .modify-btn {
