--- a/vite-project/src/components/subcomponents/styles/InputComp.css
+++ b/vite-project/src/components/subcomponents/styles/InputComp.css
@@ -1,16 +1,13 @@
 .input--creation {
     width: 12%;
-
     padding: 10px 7px;
     font-size: 16px;
-
     color: #87cefa;
-
-    background: #0f172a;
-
+    background-color: #00002f;;
     border: 1.5px solid #334155;
     border-radius: 12px;
     outline: none;
+    box-shadow: 0 0 7px #38bdf8;
     transition: 
         border-color 0.25s ease,
         box-shadow 0.25s ease,
@@ -24,4 +21,8 @@
 
 .input--creation:hover {
     border-color: #475569;
+}
+
+.input--creation::placeholder {
+    color: rgba(135, 206, 250, 0.5);
 }
