--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,10 +1,9 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 600;
-
   color: #87cefa;
-  background-color: #202020;
-
+  background-color: #00001b;
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -67,24 +66,26 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 50%;
   /* background: linear-gradient(0deg, 
     rgba(53, 100, 255, 1) 10%, 
     rgba(135, 206, 250, 1) 90%); */
-  background: #3564ff;
+  background: #0059ff;
+  box-shadow: 0 0 7px #000;
+  outline: none;
   color: #f5f5f5;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
 button:hover {
-  background: rgba(53, 100, 255, 1);
-  box-shadow: 0 0 0 #001088;
+  background: #0000ff;
+  box-shadow: 0 0 0 #000;
 }
 
 button:active {
-  background: rgba(135, 206, 250, 1);
+  background: #0099ff;
 }
 
 .custom-btn {
