--- a/vite-project/src/components/styles/TableCalendar.css
+++ b/vite-project/src/components/styles/TableCalendar.css
@@ -63,6 +63,7 @@ tr:nth-child(even) {
     width: 100%;
     height: 100%;
     background-color: #87cefa;
+    padding: 0 10px;
 }
 
 .btn--visible {
@@ -88,14 +89,15 @@ tr:nth-child(even) {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 10px;
 }
 
 .div--input--delay {
     width: auto;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .input--delay {
