--- a/vite-project/src/components/subcomponents/styles/EditableFields.css
+++ b/vite-project/src/components/subcomponents/styles/EditableFields.css
@@ -42,6 +42,16 @@
 }
 
 
+@keyframes slide-up {
+  from {
+    transform: translateY(40px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 /* 1 */
 .input-button-client {
@@ -57,6 +67,23 @@
   box-shadow: 0 0 7px #4169e180;
 }
 
+.input-button-client.hide { 
+  visibility: hidden;
+}
+
+.input-button-client.show { 
+  animation: slide-up 2.5s ease-out forwards;
+}
+
+@keyframes visible-mail {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* 2 */
 .input-button-mail {
   width: 90%;
@@ -69,6 +96,26 @@
   border: none;
   border-radius: 7px;
   box-shadow: 0 0 7px #4169e180;
+  opacity: 0;
+}
+
+.input-button-mail.hide {
+  opacity: 0;
+}
+
+.input-button-mail.show {
+  animation: visible-mail 1.5s ease-out 1.0s forwards;
+}
+
+@keyframes slide-down {
+  from {
+    transform: translateY(-40px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 /* 3 */
@@ -83,7 +130,14 @@
   border: none;
   border-radius: 7px;
   box-shadow: 0 0 7px #4169e180;
-  /* border: 1px solid coral; */
+}
+
+.input-button-phone.hide { 
+  visibility: hidden;
+}
+
+.input-button-phone.show { 
+  animation: slide-down 2.5s ease-out forwards;
 }
 
 .textarea--editable {
