--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,18 +1,9 @@
-/* IE & Edge & Firefox */
 #root {
   /* max-width: 1800px; */
-  width: auto;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
-
-  /* -ms-overflow-style: none;
-  scrollbar-width: none; */
 }
-
-/* Chrome, Safari */
-/* #root::-webkit-scrollbar {
-  display: none;
-} */
 
 .main--div--app {
   width: 90%;
@@ -37,6 +28,7 @@
 }
 
 .creator--table--liste {
+  width: auto;
   height: 80vh;
 
   /* border: 3px solid red; */
