--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -6,9 +6,9 @@
     align-items: center;
     justify-content: start;
     
-    animation: view-effect 1.0s ease 0s forwards;
+    margin: 0 10px;
 
-    /* border: 1px solid orange; */
+    animation: view-effect 1.0s ease 0s forwards;
 }
 
 .div--download {
@@ -21,20 +21,16 @@
 }
 
 .div--todo {
-    width: 95%;
+    width: 100%;
     height: 80vh;
 
     background-color: #00002f;
     border: none;
     border-radius: 20px;
 
-    padding: 0 20px;
-
     overflow-y: scroll;
     scrollbar-width: thin;
     scrollbar-color: #3564ff #00001b;
-
-    /* border: 1px solid cyan; */
 }
 
 a {
@@ -60,6 +56,7 @@ a:hover {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    margin-right: 20px;
 }
 
 li {
