--- a/vite-project/src/components/styles/FetchFromCSV.css
+++ b/vite-project/src/components/styles/FetchFromCSV.css
@@ -16,7 +16,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
     margin-bottom: 20px;
 }
 
@@ -33,7 +32,7 @@
     scrollbar-color: #3564ff #00001b;
 }
 
-a {
+.a--standard {
     text-align: center;
     text-decoration: none;
     color: #f5f5f5;
@@ -43,8 +42,17 @@ a {
     padding: 10px 20px;
 }
 
-a:hover {
+.a--standard:hover {
     color: #87cefa;
+}
+
+.a--disabled {
+    background: #696969;
+    color: #8f8f8f;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    padding: 10px 20px;
+    cursor: not-allowed;
 }
 
 .ul--fetch {
