--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -86,7 +86,7 @@ button {
   background: #0059ff;
   border: 1px solid transparent;
   border-radius: 50%;
-  box-shadow: 0 0 7px #000;
+  box-shadow: 0 0 5px #00001b;
   
   outline: none;
   color: #f5f5f5;
@@ -113,24 +113,19 @@ button:active {
   position: relative;
   width: 30px;
   height: 30px;
-  /* background: #ff4500; */
   background-color: #cc0000;
-
-  /* background: rgba(255, 69, 0, 0.75); */
   transform: scale(1.0);
   transition: transform 0.2s ease, background-color 0.2s ease;
   z-index: 1;
 }
 
 .delete--btn:hover {
-  /* background: rgba(255, 0, 0, 1); */
   background-color: #e60000;
   transform: scale(1.05);
 }
 
 .delete--btn:active {
-  /* background: rgba(255, 165, 0, 1); */
-  background-color: #ff0000;
+  background-color: #ff4000;
   transform: scale(0.95);
 }
 
